rustpython_original/ruff_python_parser/src/snapshots/ruff_python_parser__string__tests__raw_byte_literal_1.snap
---
source: ruff_python_parser/src/string.rs
expression: parse_ast
---
[
    Expr(
        StmtExpr {
            range: 0..8,
            value: Constant(
                ExprConstant {
                    range: 0..8,
                    value: Bytes(
                        [
                            92,
                            120,
                            49,
                            122,
                        ],
                    ),
                    kind: None,
                },
            ),
        },
    ),
]
